# ray-tracing

./: .gitignore
1. Simple Ray Casting/: CMakeLists.txt  color.c  color.h  main.c  png_render.h  ray.c  ray.h  scene.c  scene.h  types.h  vector.h
2. Simple Ray Casting. Lights and shadows/: main.c  matrix.c  matrix.h  png_render.c  scene.c  scene.h  types.h  vector.c
